updated font size and location to fix overlapping content

--- a/src/listwidget/_PAGERList.scss
+++ b/src/listwidget/_PAGERList.scss
@@ -11,7 +11,8 @@
   }
 
   > .subtitle {
-    left: 5em;
+    font-size: 0.8em;
+    left: 7.5em;
   }
 
   > .aside > .mmi {
@@ -19,7 +20,6 @@
   }
 
 }
-
 
 .pager-alertlevel-pending {
   background-color: #fff;
